--- a/index.html
+++ b/index.html
@@ -103,20 +103,22 @@
       <!-- ✅ 這裡 value 用「語意值」：1紅2藍3黃4白5綠（不要用硬體碼） -->
       <select id="songSelect">
         <option value="3,1,2,1,3,3,3,1,1,1,3,4,4,3,1,2,1,3,3,3,3,1,1,3,1,2">瑪莉有隻小綿羊</option>
-        <option value="2,2,4,4,5,5,4,3,3,1,1,2,4,4,3,3,1,4,4,3,3,1,2,2,4,4,5,5,4,3,3,1,1,2">小星星</option>
-        <option value="3,3,5,3,4,5,3,3,5,3,2,3,3,4,5,3,1,2,5,5,3,2,1,2">生日快樂</option>
-        <option value="2,1,3,2,2,1,3,2,3,5,4,3,5,4,4,3,4,4,3,4,2,4,2">兩隻老虎</option>
-        <option value="4,3,3,5,1,1,2,1,3,5,4,4,4,1,1,1,1,1,3,5,3,3,3,3,5,4,4,3,3,5,1,1,2">小蜜蜂</option>
-        <option value="3,3,5,4,4,5,3,1,2,2,1,3,3,1,1,3,3,5,4,4,5,3,1,2,2,1,3,1,2,2">歡樂頌</option>
-        <option value="2,1,3,5,4,4,5,3,1,2,2,1,3,5,4,4,5,3,1,2">音階上下</option>
-        <option value="2,3,4,3,2,3,4,3,1,5,4,5,1,5,4,5,2,3,4,3">分解和弦</option>
+        <option value="2,1,3,2,2,1,3,2,3,5,4,3,5,4,4,3,4,5,4,3,4,5,4,3,2,4,2">兩隻老虎</option>
+        <option value="4,3,3,5,1,1,2,1,3,5,4,4,4,1,1,1,3,5,3,3,3,5,4,4,3,3,5,1,1,2">小蜜蜂</option>
+        <option value="2,3,2,3,4,3,2,1,2,3,4,3,2,2,3,2,3,4,3,2,1,2,3,4,3,2">拔蘿蔔</option>
+        <option value="2,2,3,3,4,3,2,1,2,3,4,4,3,2,3,4,3,2">划龍舟</option>
+        <option value="2,2,3,4,4,3,2,1,2,3,4,3,2,2,2,3,4,4,3,2,1">小兔子乖乖</option>
+        <option value="3,3,2,1,2,3,3,4,3,2,1,2,3,3,2,1">泥娃娃</option>
+        <option value="3,3,3,2,1,2,3,3,4,3,2,1">小毛驢</option>
+        <option value="3,3,5,5,4,3,2,2,3,4,3,2,1,2,3,2,1">當我們同在一起</option>
+        <option value="3,3,3,2,1,2,3,3,4,3,2,1,2,3,2,1">如果感到幸福你就拍拍手</option>
+        <option value="2,3,4,3,2,1,2,3,4,3,2,1,2,3,2">丟丟銅仔</option>
+        <option value="3,5,4,3,2,1,2,3,3,2,1,2,3,4,3,2">望春風</option>
+        <option value="3,3,5,4,3,2,1,2,3,3,5,4,3,2">思想起</option>
+        <option value="2,3,4,3,2,1,2,3,4,3,2,1,2,3,2">四季紅</option>
+        <option value="3,5,4,3,2,1,2,3,3,2,1,2,3,4,3,2">白牡丹</option>
+        <option value="3,5,4,3,2,1,2,3,3,2,1,2,3,4,3,2">雨夜花</option>
 
-        <option value="2,2,3,3,4,3,2,1,2,3,4,4,3">划龍舟</option>
-        <option value="2,3,2,3,4,3,2,1,2,3,4,3,2,2,3,2,3,4,3,2,1,2,3,4,3,2,3,4,5,4,3,2">拔蘿蔔</option>
-        <option value="2,2,3,4,4,3,2,1,2,3,4,3,2,2,2,3,4,4,3,2,1,2,3,4,3,2,3,4,5,4,3,2,1">小兔子</option>
-        <option value="2,3,4,4,5,4,3,2,2,3,4,3,2,2,3,4,4,5,4,3,2,2,3,4,3,2,3,4,5,4,3,2">划呀划小船</option>
-
-        <option value="2,3,4,5,4,3,2,1,2,2,3,3,4,4,5,4,3,2,1,2,3,2,1,1,2,3,4,5,5,4,3,2,2,1">小步舞曲</option>
       </select>
 
       <div class="hint">✅ 你硬體實際是 1藍2紅3黃4綠5白，所以程式會自動轉換</div>
