--- a/index.html
+++ b/index.html
@@ -112,11 +112,17 @@
         <option value="3,3,3,2,1,2,3,3,4,3,2,1">小毛驢</option>
         <option value="3,3,5,5,4,3,2,2,3,4,3,2,1,2,3,2,1">當我們同在一起</option>
         <option value="3,3,3,2,1,2,3,3,4,3,2,1,2,3,2,1">如果感到幸福你就拍拍手</option>
+        <option value="3,3,2,1,2,3,3,4,3,2,1,2,3,3,2,1,2,3,2,1">小小世界</option>
+        <option value="2,3,4,3,2,1,2,3,4,3,2,1,2,3,4,3,2,1">小紅帽</option>
+        <option value="3,3,5,4,3,2,1,2,3,3,2,1,2,3,4,3,2">玩具兵進行曲</option>
+        <option value="2,2,3,4,5,4,3,2,2,3,4,3,2,1,2,3,4,3,2">蝴蝶</option>
+        <option value="3,3,4,5,4,3,2,1,2,3,3,4,3,2,1,2,3,2,1">捕魚歌</option>
+
         
 
       </select>
 
-      <div class="hint">✅ 你硬體實際是 1藍2紅3黃4綠5白，所以程式會自動轉換</div>
+      
 
       <br>
       <button id="startBtn" class="btn-start" onclick="startGame()">開始遊戲</button>
